[package]
name = "tracing_money"
version = "0.1.0"
authors = ["Simon <simon.tan.yu.jing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

log = "0.4.8"
env_logger = "0.8.1"
tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }
futures = "0.3.8"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
hex = "0.4.2"